--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -1,21 +1,4 @@
-<style>
-        #content {
-                position: fixed;
-                height: 100%;
-                width: 100%;
-                top: 7%;
-                overflow: auto;
-                background-color: darkslategray
-        }
-
-        #poiTable {
-                position: absolute;
-                top: 0%;
-                width: 100%;
-
-
-        }
-</style>
+<link rel="stylesheet" href="/style/poi.css">
 
 
 <div ng-controller="poiCtrl as poiCtrl" id="content" class="table">
