--- a/components/favorites/favorites.html
+++ b/components/favorites/favorites.html
@@ -1,39 +1,4 @@
-
-
-<style>
-    #content {
-        position: fixed;
-        background-image: url('https://i.ytimg.com/vi/_lQHg7NjZSI/maxresdefault.jpg');
-        top: 7.5%;
-        height: 92.5%;
-        width: 100%;
-        overflow: auto;
-    }
-
-    #poi {
-        position: relative;
-        left: 10%;
-        top: 10%;
-        width: 70%;
-        text-align: left;
-    }
-    #image{
-        position: absolute;
-        top: 18%;
-        left:35%;
-    }
-    #saveButton{
-        position: absolute;
-        top: 2%;
-        left: 95%;
-    }
-    #removeButton{
-        width: 20%;
-    }
-
-</style>
-
-
+<link rel="stylesheet" href="/style/favorites.css">
 
 <div  ng-controller="favoritesController as favCtrl" id="content">
     <div id="saveButton">
