--- a/components/poiPage/poiPage.html
+++ b/components/poiPage/poiPage.html
@@ -1,24 +1,4 @@
-<style>
-    #content {
-        position: fixed;
-        background-image: url('https://i.ytimg.com/vi/_lQHg7NjZSI/maxresdefault.jpg');
-        top: 7.5%;
-        height: 92.5%;
-        width: 100%;
-    }
-
-    #poi {
-        position: absolute;
-        left: 10%;
-        top: 15%;
-        text-align: left;
-    }
-    #image{
-        position: absolute;
-        top: 15%;
-        left:35%;
-    }
-</style>
+<link rel="stylesheet" href="/style/poiPage.css">
 
 <div ng-controller="poiPageController as poiPageController" id="content">
     <div id="poi">
