--- a/components/home/home.html
+++ b/components/home/home.html
@@ -1,61 +1,5 @@
-<html ng-app="citiesApp">
-
-<head>
-    <style>
-        #content {
-            position: absolute;
-            top: 7%;
-            width: 100%;
-            height: 93%;
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c6/Be%27er_Sheva_at_night.jpg');
-            background-repeat: no-repeat;
-            color: black;
-        }
-
-        #recomended {
-            position: absolute;
-            top: 0%;
-            height: 60%;
-            width: 100%;
-        }
-
-        #category1 {
-            position: absolute;
-            left: 10%;
-        }
-
-        #category2 {
-            position: absolute;
-            left: 50%;
-        }
-
-        #visited {
-            position: absolute;
-            top: 60%;
-            height: 40%;
-            width: 100%;
-        }
-
-        #visited_head {
-            text-align: center;
-        }
-
-        #visited_poi1 {
-            position: absolute;
-            top: 5%;
-            left: 10%;
-        }
-
-        #visited_poi2 {
-            position: absolute;
-            top: 5%;
-            left: 80%;
-        }
-    </style>
-</head>
-
-<body>
-
+<link rel="stylesheet" href="/style/home.css">
+<
     <div id="content" ng-controller="homeController as homCtrl">
         <div id="recomended" class="border">
             <div id="category1">
@@ -88,6 +32,5 @@
 
 
 
-</body>
 
-</html>
+
