--- a/components/login/login.html
+++ b/components/login/login.html
@@ -1,80 +1,6 @@
-<style>
-    #content {
-        position: fixed;
-        top: 7%;
-        width: 100%;
-        height: 92.5%;
-    overflow: auto;
-    }
-    #upper{
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        height: 70%;
-        width: 100%;
-        background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c6/Be%27er_Sheva_at_night.jpg');
-        background-repeat: no-repeat;
-    }
 
-    #head {
-        text-align: center;
-    }
 
-    #log {
-        position: absolute;
-        top: 15%;
-        left: 33%;
-        width: 30%;
-        text-align: center;
-        
-    }
-
-    a{
-        color: black;
-    }
-
-    .border {
-        border-radius: 5px;
-        padding: 8%;
-        background-color: slategrey
-    }
-
-    #go_to_register {
-        text-align: center;
-    }
-
-    #pass-recovery {
-        text-align: center;
-    }
-
-    #footer {
-        position: absolute;
-        top: 66.3%;
-        left: 0;
-        width: 100%;
-        background-color: black;
-    }
-
-    #poi1 {
-        position: absolute;
-        top: 5%;
-        left: 5%;
-    }
-
-    #poi2 {
-        position: absolute;
-        top: 5%;
-        left: 45%;
-    }
-
-    #poi3 {
-        position: absolute;
-        top: 5%;
-        left: 90%;
-    }
-</style>
-
-<link rel="stylesheet" href="login.css">
+<link rel="stylesheet" href="/style/login.css">
 
 <div id="content" ng-controller="loginController as logCtrl" class="border">
     <div id ="upper" >
