--- a/components/register/register.html
+++ b/components/register/register.html
@@ -1,42 +1,4 @@
-<html>
-
-<head>
-    <style>
-        #content {
-            position: fixed;
-            top: 7%;
-            width: 100%;
-            height: 93%;
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c6/Be%27er_Sheva_at_night.jpg');
-            background-repeat: no-repeat;
-            overflow: auto;
-        }
-
-        #head {
-            text-align: center;
-        }
-
-        .border {
-            padding: 5%;
-            border: 2px solid black;
-            border-radius: 5px;
-            background-color: slategrey
-        }
-
-        #reg {
-            position: absolute;
-            top: 3%;
-            left: 37%;
-            width: 29%;
-        }
-
-        label {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-
-<body>
+<link rel="stylesheet" href="/style/register.css">
     <div id="content">
         <div id="reg" ng-controller="registerController as regCtrl">
             <div id="head">
@@ -76,6 +38,3 @@
         </div>
 
     </div>
-</body>
-
-</html>
