--- a/style/login.css
+++ b/style/login.css
@@ -1,9 +1,9 @@
 #content {
-    position: absolute;
+    position: fixed;
     top: 7%;
     width: 100%;
-    height: 90%;
-
+    height: 92.5%;
+overflow: auto;
 }
 #upper{
     position: absolute;
@@ -48,7 +48,7 @@ a{
 
 #footer {
     position: absolute;
-    top: 70%;
+    top: 66.3%;
     left: 0;
     width: 100%;
     background-color: black;
