--- a/components/poiPage/poiPage.html
+++ b/components/poiPage/poiPage.html
@@ -23,11 +23,11 @@
         
         <div ng-show="login">
                 <div ng-show="poiPageController.pois.indexOf(poiPageController.poi.id) === -1">
-                        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiCtrl.addToFavorits(x)"
+                        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiPageController.addToFavorits(poiPageController.poi.id)"
                                 style="height: 50px; width: 50px;">
                 </div>
                 <div ng-show="poiPageController.pois.indexOf(poiPageController.poi.id) > -1">
-                        <img src="https://image.flaticon.com/icons/svg/53/53415.svg" ng-click="poiCtrl.addToFavorits()" style="height: 50px; width: 50px;">
+                        <img src="https://image.flaticon.com/icons/svg/53/53415.svg" ng-click="poiPageController.removeFromFavorites(poiPageController.poi.id)" style="height: 50px; width: 50px;">
                 </div>
         </div>
         <br>
