--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -63,10 +63,10 @@
                                 <td>
                                         <div ng-show="login">
                                                 <div ng-show="poiCtrl.pois.indexOf(x.id) === -1">
-                                                        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiCtrl.addToFavorits(x)" style="height: 50px; width: 50px;">
+                                                        <img src="https://image.flaticon.com/icons/svg/53/53415.svg" ng-click="poiCtrl.addToFavorits(x)" style="height: 50px; width: 50px;">
                                                 </div>
                                                 <div ng-show="poiCtrl.pois.indexOf(x.id) > -1">
-                                                        <img src="https://image.flaticon.com/icons/svg/53/53415.svg" ng-click="poiCtrl.removeFromFavorites(x)" style="height: 50px; width: 50px;">
+                                                        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiCtrl.removeFromFavorites(x)" style="height: 50px; width: 50px;">
                                                 </div>
                                         </div>
                                 </td>
