--- a/components/register/register.html
+++ b/components/register/register.html
@@ -21,7 +21,7 @@
                         <br>
                         <input type="checkbox" placeholder="Category" ng-model="regCtrl.category3"> Academic institutions
                         <br>
-                        <input type="checkbox" placeholder="Category" ng-model="regCtrl.category4"> nof
+                        <input type="checkbox" placeholder="Category" ng-model="regCtrl.category4"> Cinema
                         <br>
                         <label>choose at least one question:</label>
                         <br>
