remove css. fix reg link

--- a/components/login/login.html
+++ b/components/login/login.html
@@ -19,7 +19,7 @@
                 </form>
 
                 <div id="go_to_register" ng-show="!login">
-                    <a type="link" href="#/register"> not registered yet?</a>
+                    <a type="link" href="#/reg"> not registered yet?</a>
 
                 </div>
 
@@ -34,7 +34,8 @@
             </div>
         </div>
     </div>
-    <div id="footer" class="border">
+    
+    <!-- <div id="footer" class="border">
         <div id="poi1">
             poi1.name
             <br> poi1.details
@@ -47,5 +48,5 @@
             poi3.name
             <br> poi3.details
         </div>
-    </div>
+    </div> -->
 </div>
