--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -8,7 +8,7 @@
                                 <th scope="col"></th>
 
                                 <th ng-show="login">
-                                        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiCtrl.addToFavorits()" ng-href="#favorites" style="height: 50px; width: 30px;"> {{poiCtrl.size}}
+                                        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiCtrl.addToFavorits()" href="#favorites" style="height: 50px; width: 30px;"> {{poiCtrl.size}}
                                 </th>
 
                                 <th>
