submit reg garbage local db favs

--- a/components/register/register.html
+++ b/components/register/register.html
@@ -34,7 +34,7 @@
                     
                     <input type="text" class="form-control" ng-model="regCtrl.ans" placeholder="Answer" >
                     <br>
-                    <button type="submit" class="btn btn-secondary btn-sm">Submit</button>
+                    <button type="submit" class="btn btn-secondary btn-sm" ng-click="regCtrl.submit()">Submit</button>
             </form>
 
         </div>
