--- a/components/favorites/favorites.html
+++ b/components/favorites/favorites.html
@@ -4,20 +4,18 @@
     <div id="saveButton">
         <button class="btn btn-dark" ng-click="favCtrl.saveFva()">Save</button>
     </div>
-    <h2 id = "head">Orgenize your trip</h2>
-    <div ng-repeat="fav in favCtrl.sites" id="poi" ng-if="favCtrl.pois.indexOf(fav.id) > -1">
-
-        
+    <div ng-repeat="fav in favCtrl.sites" id="poi" ng-if="favCtrl.pois.indexOf(fav.id) > -1">    
         <div id = "moveButtons">
             <button class="btn btn-success" ng-click="favCtrl.moveUp(fav)">Up</button>
             <button class="btn btn-info" ng-click="favCtrl.moveDown(fav)">Down</button>
         </div>
-        <label for="name"> Site name:</label>
         <a href="#poiPage" ng-click="favCtrl.selectedSite(fav)">{{fav.name}}</a>
         <br>
-        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" id="removeButton" style="height: 60px; width: 60px;" ng-click="favCtrl.remove(fav)" >
+        <img class="image" ng-style="{'height': '200px'}" ng-src="{{fav.pic}} ">
+        
+        <img class="star" src="https://image.flaticon.com/icons/svg/148/148839.svg" id="removeButton" style="height: 60px; width: 60px;" ng-click="favCtrl.remove(fav)" >
         <br>
         <br>
+
     </div>
-    <img id="image" ng-style="{'height': '100px'}" ng-src="{{poiPageController.poi.pic}} ">
 </div>
