--- a/style/favorites.css
+++ b/style/favorites.css
@@ -16,16 +16,16 @@ a{
 }
 #poi {
     position: relative;
-    left: 10%;
+    left: 27%;
     top: 15%;
     width: 70%;
     text-align: left;
+    margin-bottom: 5%;
 
 }
-#image{
-    position: absolute;
-    top: 18%;
-    left:35%;
+.star{
+margin-left: 10%;
+margin-top: 4%;
 }
 #saveButton{
     position: absolute;
@@ -38,4 +38,6 @@ a{
 #moveButtons{
     position: absolute;
     left: 25%;
+    margin-left: 15%;
+    padding: 6%;
 }
