--- a/components/login/login.html
+++ b/components/login/login.html
@@ -1,13 +1,13 @@
 <link rel="stylesheet" href="/style/login.css">
 
 
-<div id="content" ng-controller="loginController as logCtrl" class="border">
+<div id="content" ng-controller="loginController as logCtrl">
     <div id="upper">
         <div id="log">
             <div id="head">
                 <h3>Login</h3>
             </div>
-            <div class="border">
+            <div class="border" id = "border">
                 <form ng-submit="logCtrl.submit()" name="myForm">
 
 
