--- a/style/login.css
+++ b/style/login.css
@@ -4,6 +4,9 @@
     width: 100%;
     height: 92.5%;
 overflow: auto;
+border-radius: 5px;
+padding: 8%;
+background-color: slategrey; 
 }
 #upper{
     position: absolute;
@@ -32,7 +35,7 @@ a{
     color: black;
 }
 
-.border {
+#border {
     border-radius: 5px;
     padding: 8%;
     background-color: slategrey; 
@@ -54,23 +57,19 @@ a{
     top: 66.3%;
     left: 0;
     width: 100%;
-     /* background-color: black; */
-     display: flex;
-     float: left;
+    height: 33.9%;
+    background-color: black;
+    display: flex;
+    float: left;
+    border-radius: 5px; 
+      
 }
 
-#poi {
-margin-left: 7%;
-}
+    #poi {
+        margin-top: 3%;
+        margin-left: 10%;
+    }
 
-#poi2 {
-    position: absolute;
-    top: 5%;
-    left: 45%;
-}
-
-#poi3 {
-    position: absolute;
-    top: 5%;
-    left: 90%;
-}
+    a{
+        color: blue;
+    }
